package com.dutianze.designpattern.behavioral.chain.request;

/**
 * @author dutianze
 * @date 2022/8/13
 */
public enum RequestType {

  DEFEND_CASTLE,
  TORTURE_PRISONER,
  COLLECT_TAX
}