@startuml
class OrcKing {
- RequestHandler chain
- void buildChain()
+ void makeRequest(Request)
}
abstract class RequestHandler {
- RequestHandler next
+ void handleRequest(Request)
# void printHandling(Request)
+ {abstract}String toString()
}
class OrcOfficer {
+ void handleRequest(Request)
+ String toString()
}
class OrcSoldier {
+ void handleRequest(Request)
+ String toString()
}
class OrcCommander {
+ void handleRequest(Request)
+ String toString()
}
enum RequestType {
+  DEFEND_CASTLE
+  TORTURE_PRISONER
+  COLLECT_TAX
}
class Request {
- RequestType requestType
- String requestDescription
- boolean handled
+ void markHandled()
+ boolean isHandled()
+ String toString()
}


OrcKing -->  "-chain" RequestHandler
RequestHandler -->  "-next" RequestHandler
Request -->  "-requestType" RequestType
OrcCommander --|> RequestHandler
OrcOfficer --|> RequestHandler
OrcSoldier --|> RequestHandler
@enduml